--- a/CloudCast/Base.lproj/Main.storyboard
+++ b/CloudCast/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2IP-9L-tLr">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -9,22 +9,55 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Forecast View Controller-->
         <scene sceneID="Czn-Yc-wKv">
             <objects>
-                <viewController id="2IP-9L-tLr" sceneMemberID="viewController">
+                <viewController id="2IP-9L-tLr" customClass="ForecastViewController" customModule="CloudCast" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mhf-gh-27K">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Miami, FL" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rqS-tA-BPA">
-                                <rect key="frame" x="62" y="79" width="91" height="27"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Miami, FL" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rqS-tA-BPA">
+                                <rect key="frame" x="101" y="79" width="190" height="56.333333333333343"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="47"/>
                                 <color key="textColor" systemColor="systemMintColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wv6-BT-FxC">
-                                <rect key="frame" x="30" y="79" width="30" height="30"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="5FG-1z-Tsw">
+                                <rect key="frame" x="99" y="210.33333333333334" width="175" height="316.33333333333326"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="September 30, 2023" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6At-SL-PfX">
+                                        <rect key="frame" x="8.6666666666666714" y="0.0" width="157.66666666666663" height="20.333333333333332"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud-drizzle-sun-2" translatesAutoresizingMaskIntoConstraints="NO" id="vd4-hZ-jQW">
+                                        <rect key="frame" x="0.0" y="44.333333333333314" width="175" height="175"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="175" id="bUA-EK-DYe"/>
+                                            <constraint firstAttribute="width" constant="175" id="w1L-Xr-GK9"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cloudy" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ZW-SM-Qmq">
+                                        <rect key="frame" x="60.666666666666671" y="243.33333333333334" width="53.666666666666671" height="20.333333333333343"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="90° F" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OKm-Ec-nBN">
+                                        <rect key="frame" x="58.666666666666657" y="287.66666666666663" width="58" height="28.666666666666686"/>
+                                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="175" id="C0w-f8-Mbn"/>
+                                </constraints>
+                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="place-marker" translatesAutoresizingMaskIntoConstraints="NO" id="wv6-BT-FxC">
+                                <rect key="frame" x="63" y="79" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="XNS-ui-ksZ"/>
                                     <constraint firstAttribute="width" constant="30" id="hJt-kt-t1w"/>
@@ -39,9 +72,18 @@
                             <constraint firstItem="rqS-tA-BPA" firstAttribute="top" secondItem="pnO-EM-cOQ" secondAttribute="top" constant="20" id="U96-gn-UMd"/>
                             <constraint firstItem="wv6-BT-FxC" firstAttribute="top" secondItem="pnO-EM-cOQ" secondAttribute="top" constant="20" id="UfN-Zr-1Tb"/>
                             <constraint firstItem="rqS-tA-BPA" firstAttribute="leading" secondItem="wv6-BT-FxC" secondAttribute="trailing" constant="2" id="ecn-YD-rpb"/>
+                            <constraint firstItem="5FG-1z-Tsw" firstAttribute="top" secondItem="rqS-tA-BPA" secondAttribute="bottom" constant="75" id="j73-d0-oI2"/>
+                            <constraint firstItem="rqS-tA-BPA" firstAttribute="leading" secondItem="wv6-BT-FxC" secondAttribute="trailing" constant="2" id="jN5-xz-iAY"/>
                             <constraint firstItem="wv6-BT-FxC" firstAttribute="top" secondItem="pnO-EM-cOQ" secondAttribute="top" constant="20" id="jzp-oU-GGL"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="dateLabel" destination="mhf-gh-27K" id="eUP-tf-fGI"/>
+                        <outlet property="descriptionLabel" destination="8ZW-SM-Qmq" id="aJe-96-Ijy"/>
+                        <outlet property="forecastImageView" destination="vd4-hZ-jQW" id="HvI-Np-9nt"/>
+                        <outlet property="locationLabel" destination="mhf-gh-27K" id="Xgi-zj-As1"/>
+                        <outlet property="temperatureLabel" destination="OKm-Ec-nBN" id="Qfm-hB-uax"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zIr-7l-lTu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -49,6 +91,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="cloud-drizzle-sun-2" width="91" height="91"/>
+        <image name="place-marker" width="64" height="64"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
